--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sistemas_reactivos_tp3</name>
+	<name>grupo_1_tp_3</name>
 	<comment></comment>
 	<projects>
 	</projects>
